--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="edit_store_message_save_success">Tienda Agregada correctamente</string>
     <string name="arg_id">key_id</string>
     <string name="edit_store_message_update_success">Tienda Actualizada</string>
+    <string name="edit_store_message_valid">Revise los campos Requeridos</string>
 </resources>
