--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="arg_id">key_id</string>
     <string name="edit_store_message_update_success">Tienda Actualizada</string>
     <string name="edit_store_message_valid">Revise los campos Requeridos</string>
+    <string name="edit_store_title_edit">Editar Tienda</string>
 </resources>
