--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="dialog_delete_cancel">Cancelar</string>
     <string name="dialog_options_title">¿Qué desea hacer?</string>
     <string name="main_error_no_website">Esta tienda no cuenta con un Sitio Web</string>
+    <string name="main_error_no_resolve">No se encontro ninguna app compatible</string>
 </resources>
