Soporte para múltiples idiomas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,29 +1,34 @@
 <resources>
-    <string name="app_name">Tiendas</string>
-    <string name="description_img_photo">Imagen de la Tienda</string>
-    <string name="description_store_add">Crear Tienda</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="hint_name">Nombre de la Tienda</string>
-    <string name="helper_required">Requerido</string>
-    <string name="hint_phone">Teléfono</string>
-    <string name="hint_website">URL del Sitio Web</string>
-    <string name="hint_photo_url">URL de la Imagen</string>
-    <string name="edit_store_title_add">Crear Tienda</string>
+    <string name="app_name">Stores</string>
+
+    <string name="arg_id" translatable="false">key_id</string>
+
+    <string name="dialog_delete_title">¿Delete Store?</string>
+    <string name="dialog_delete_confirm">Delete</string>
+    <string name="dialog_delete_cancel">Cancel</string>
+    <string name="dialog_options_title">¿What would you like to do?</string>
+
+    <string name="description_img_photo">Store Image</string>
+    <string name="description_store_add">Create Store</string>
+
+    <string name="edit_store_title_edit">Edit Store</string>
+    <string name="edit_store_message_update_success">Updated Store</string>
+    <string name="edit_store_message_valid">Review the Required Fields</string>
+    <string name="edit_store_message_save_success">Store Added Successfully</string>
+    <string name="edit_store_title_add">Create Store</string>
+
+    <string name="hint_name">Name of the Store</string>
+    <string name="hint_phone">Telephone</string>
+    <string name="hint_website">Website URL</string>
+    <string name="hint_photo_url">Image URL</string>
+
+    <string name="helper_required">Required</string>
+
     <string name="menu_save">Save</string>
-    <string name="edit_store_message_save_success">Tienda Agregada correctamente</string>
-    <string name="arg_id">key_id</string>
-    <string name="edit_store_message_update_success">Tienda Actualizada</string>
-    <string name="edit_store_message_valid">Revise los campos Requeridos</string>
-    <string name="edit_store_title_edit">Editar Tienda</string>
-    <string name="dialog_delete_title">¿Eliminar Tienda?</string>
-    <string name="dialog_delete_confirm">Eliminar</string>
-    <string name="dialog_delete_cancel">Cancelar</string>
-    <string name="dialog_options_title">¿Qué desea hacer?</string>
-    <string name="main_error_no_website">Esta tienda no cuenta con un Sitio Web</string>
-    <string name="main_error_no_resolve">No se encontro ninguna app compatible</string>
 
+    <string name="main_error_no_website">This Store does not have a Website</string>
+    <string name="main_error_no_resolve">No compatible App found</string>
 
-    <string name="options_item_call">Llamar</string>
-    <string name="options_item_website">Ir al Sitio Web</string>
+    <string name="options_item_call">To Call</string>
+    <string name="options_item_website">Go to Website</string>
 </resources>
